--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^4.2.0",
+    "axios": "^0.19.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react_ujs": "^2.6.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.8",
     "webpack-dev-server": "^3.9.0"
   }
 }
