--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack-merge": "^4.2.2"
   },
   "version": "0.1.0",
   "devDependencies": {
