--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
